gnerada tablad e excel

--- a/plataforma/src/app/docente/docente.component.html
+++ b/plataforma/src/app/docente/docente.component.html
@@ -1885,7 +1885,7 @@
 
     <div *ngIf="banderTabla3" class="col-md-12" style="text-align: center;">
       <button class="btn btn-primary" (click)="pruebaclick()" [hidden]="!btnFinalizar3"> Calcular el registro de
-        notas C</button>
+        notas</button>
       <button class="btn btn-secondary" style="padding-right: 3%; padding-left: 3%" [hidden]="btnFinalizar3"
         (click)="habilitarGRC()">
         Cancelar</button> &nbsp;&nbsp;&nbsp;
