cambio en las variables (modo esoera)

--- a/plataforma/src/app/docente/docente.component.html
+++ b/plataforma/src/app/docente/docente.component.html
@@ -42,8 +42,8 @@
           <select (change)="asignarMateriaCurso($event.target.value)" class=" custom-select " required>
             <option [value]="" selected>Selecciona materia y curso</option>
             <option *ngFor="let oneDoor of vectorListadoMisMaterias"
-              value="{{oneDoor.CURSO.ID_CURSO}},{{oneDoor.ID_MATERIA}},{{oneDoor.CURSO.CURSO}},{{oneDoor.NOMBRE_MATERIA}},{{oneDoor.CURSO.PARALELO}} ">
-              {{oneDoor.NOMBRE_MATERIA}}: {{oneDoor.CURSO.CURSO}} {{oneDoor.CURSO.PARALELO}}</option>
+              value="{{oneDoor?.CURSO?.ID_CURSO}},{{oneDoor.ID_MATERIA}},{{oneDoor?.CURSO?.CURSO}},{{oneDoor.NOMBRE_MATERIA}},{{oneDoor?.CURSO?.PARALELO}} ">
+              {{oneDoor.NOMBRE_MATERIA}}: {{oneDoor?.CURSO?.CURSO}} {{oneDoor?.CURSO?.PARALELO}}</option>
           </select>
 
 
