--- a/plataforma/src/app/administrador/administrador.component.html
+++ b/plataforma/src/app/administrador/administrador.component.html
@@ -1229,15 +1229,11 @@
               <option value="NOVENO AÑO DE EDUCACIÓN GENERAL BÁSICA (DISTANCIA VIRTUAL)">NOVENO AÑO DE EDUCACIÓN GENERAL BÁSICA (DISTANCIA VIRTUAL) </option>
               <option value="DÉCIMO AÑO DE EDUCACIÓN GENERAL BÁSICA (DISTANCIA VIRTUAL)">DÉCIMO AÑO DE EDUCACIÓN GENERAL BÁSICA (DISTANCIA VIRTUAL)</option>
       
-              <option value="PRIMER AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)">PRIMER AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)</option>
-              <option value="SEGUNDO AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)">SEGUNDO AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)</option>
-              <option value="TERCER AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)">TERCER AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)</option>
+              <option value="PRIMER AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)">PRIMER AÑO DE BACHILLERATO GENERAL UNIFICADO (DISTANCIA VIRTUAL)</option>
+              <option value="SEGUNDO AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)">SEGUNDO AÑO DE BACHILLERATO GENERAL UNIFICADO (DISTANCIA VIRTUAL)</option>
+              <option value="TERCER AÑO DE BACHILLERATO GENERAL UNIFICADO (SEMIPRESENCIAL)">TERCER AÑO DE BACHILLERATO GENERAL UNIFICADO (DISTANCIA VIRTUAL)</option>
 
 
-
-              <option value="OCTAVO AÑO DE EDUCACIÓN GENERAL BÁSICA">OCTAVO AÑO DE EDUCACIÓN GENERAL BÁSICA</option>
-              <option value="NOVENO AÑO DE EDUCACIÓN GENERAL BÁSICA">NOVENO AÑO DE EDUCACIÓN GENERAL BÁSICA</option>
-              <option value="DÉCIMO AÑO DE EDUCACIÓN GENERAL BÁSICA">DÉCIMO AÑO DE EDUCACIÓN GENERAL BÁSICA</option>
               <option value="BÁSICO SUPERIOR INTENSIVO">BÁSICO SUPERIOR INTENSIVO</option>
               <option value="PRIMER AÑO DE BACHILLERATO GENERAL UNIFICADO">PRIMER AÑO DE BACHILLERATO GENERAL UNIFICADO</option>
               <option value="SEGUNDO AÑO DE BACHILLERATO GENERAL UNIFICADO">SEGUNDO AÑO DE BACHILLERATO GENERAL UNIFICADO</option>
