cambios antes del pago

--- a/plataforma/src/app/docente/docente.component.html
+++ b/plataforma/src/app/docente/docente.component.html
@@ -1213,7 +1213,7 @@
     <!-- ====================================================   Tabla  Auxiliar para reporte para Notas 2 ============================================-->
 
     <table id="results2" *ngIf="banderTabla2" class="table table-hover table-bordered table-responsive "
-      style="margin-top: -500%; font-size: 70%; width: 100%; margin-left: 0%">
+      style="margin-top: -50000px; font-size: 70%; width: 100%; margin-left: 0%">
 
       <div class="  form-control form-inline">
         <h4>{{this.Titulo2}} </h4>
