cambios de tabals que no imprimen y contador

--- a/plataforma/src/app/estudiante/estudiante.component.html
+++ b/plataforma/src/app/estudiante/estudiante.component.html
@@ -1413,7 +1413,7 @@
         <tr *ngFor=" let listado of  vectorListadoMisMaterias; let i = index; let listadoN of listadoEstudianteNotas">
 
 
-          <td valign="middle" style="padding-right: 0.5%;  padding-left: 0.5%; border-right: 0px;">{{listado.nombre}}
+          <td valign="middle" style="padding-right: 0.5%;  padding-left: 0.5%; border-right: 0px;">{{listado.NOMBRE_MATERIA}}
           </td>
 
 
