--- a/plataforma/src/app/estudiante/estudiante.component.html
+++ b/plataforma/src/app/estudiante/estudiante.component.html
@@ -684,9 +684,9 @@
             <th style="color: white" scope="col" class="verticalText">Insumo 6 </th>
             <th style="color: white" scope="col" class="verticalText">Insumo 7 </th>
             <th style="color: white" scope="col" class="verticalText">Insumo 8 </th>
-            <th style="color: white" scope="col" class="verticalText">80% </th>
+            <th style="color: white" scope="col" class="verticalText">80%...</th>
             <th style="color: white" scope="col" class="verticalText">Examen</th>
-            <th style="color: white" scope="col" class="verticalText">20%</th>
+            <th style="color: white" scope="col" class="verticalText">20%...</th>
             <th style="color: white" scope="col" class="verticalText">Promedio</th>
 
             <th style="color: white" scope="col" class="verticalText">Insumo 1 </th>
@@ -697,9 +697,9 @@
             <th style="color: white" scope="col" class="verticalText">Insumo 6 </th>
             <th style="color: white" scope="col" class="verticalText">Insumo 7 </th>
             <th style="color: white" scope="col" class="verticalText">Insumo 8 </th>
-            <th style="color: white" scope="col" class="verticalText">80% </th>
+            <th style="color: white" scope="col" class="verticalText">80%...</th>
             <th style="color: white" scope="col" class="verticalText">Examen</th>
-            <th style="color: white" scope="col" class="verticalText">20%</th>
+            <th style="color: white" scope="col" class="verticalText">20%...</th>
             <th style="color: white" scope="col" class="verticalText">Promedio</th>
             <th style="color: white" scope="col" class="verticalText">Promedio periodo</th>
             <th style="color: white" scope="col" class="verticalText">Examen Supletorio</th>
@@ -730,8 +730,8 @@
             <td id="tdfila">
               <input disabled id="tdboton" type="text" [(ngModel)]="this.object[i].insumo4" name="insumo4{{i}}">
             </td>
-            <td id="tdfila">
-              <input disabled id="tdboton" type="text" [(ngModel)]="this.object[i].insumo5" name="insumo5{{i}}">
+            <td id="tdfila"  id="tdfila" style="background-color:rgb(247, 83, 116)">
+              <input style="background-color:rgb(247, 83, 116)" disabled id="tdboton" type="text" [(ngModel)]="this.object[i].insumo5" name="insumo5{{i}}">
             </td>
             <td id="tdfila">
               <input disabled id="tdboton" type="text" [(ngModel)]="this.object[i].insumo6" name="insumo6{{i}}">
