--- a/plataforma/src/app/administrador/administrador.component.css
+++ b/plataforma/src/app/administrador/administrador.component.css
@@ -3,8 +3,9 @@
     /*     background-color: #343a40!important;
    */
     background-color: white;
-    background-size: cover;
-    background-position: right center;
+    background-size: 50%;
+    background-position:center;
+    background-repeat:no-repeat;
   }
   
   
