--- a/plataforma/src/app/docente/docente.component.html
+++ b/plataforma/src/app/docente/docente.component.html
@@ -495,7 +495,7 @@
     <!-- ====================================================   Tabla  Auxiliar para reporte para Notas 1 ============================================-->
 
     <table id="results" *ngIf="banderTabla1" class="table table-hover table-bordered table-responsive"
-      style="margin-top: -1000%; font-size: 60% ; width: 95% ; margin-left: 3%">
+      style="margin-top: -10000000%; font-size: 60% ; width: 95% ; margin-left: 3%">
 
       <div class="  form-control ">
         <h4>{{this.Titulo2}} </h4>
@@ -1213,7 +1213,7 @@
     <!-- ====================================================   Tabla  Auxiliar para reporte para Notas 2 ============================================-->
 
     <table id="results2" *ngIf="banderTabla2" class="table table-hover table-bordered table-responsive "
-      style="margin-top: -50000px; font-size: 70%; width: 100%; margin-left: 0%">
+      style="margin-top: -10000000%; font-size: 70%; width: 100%; margin-left: 0%">
 
       <div class="  form-control form-inline">
         <h4>{{this.Titulo2}} </h4>
@@ -1970,7 +1970,7 @@
 
 
     <table id="results3" *ngIf="banderTabla3" class="table table-hover table-bordered table-responsive "
-      style="margin-top: -500%; font-size: 70%; width: 100%; margin-left: 0%">
+      style="margin-top:  -10000000%; font-size: 70%; width: 100%; margin-left: 0%">
 
       <div class="  form-control form-inline">
         <h4>{{this.Titulo2}} </h4>
